[bugfix] correctly align status prepend

--- a/app/javascript/flavours/glitch/styles/gts/status-prepend.scss
+++ b/app/javascript/flavours/glitch/styles/gts/status-prepend.scss
@@ -1,7 +1,8 @@
-/* Status: Prepend */
+/* 🚥 Status: Prepend */
 .status__prepend {
     display: inline-flex;
     align-items: center;
+    align-self: start;
     gap: 5px;
     margin-block-end: 10px;
     padding: 5px 10px;
